Fix (again) Lombok with Java 16