@@ -1,2 +1,3 @@
 -XX:TieredStopAtLevel=1
 -Djava.util.logging.config.file=config/logging.properties
+--illegal-access=warn
